Update for offline data capture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ function(add_tool name)
       OUTPUT_NAME ${name})
 endfunction()
 
-add_tool(readport read.cpp)
-add_tool(to_csv to_csv.cpp)
-add_tool(check check.cpp)
+#add_tool(readport read.cpp)
+#add_tool(to_csv to_csv.cpp)
+#add_tool(check check.cpp)
 add_tool(sim sim.cpp capture.h capture.cpp)
