--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ endfunction()
 #add_tool(to_csv to_csv.cpp)
 #add_tool(check check.cpp)
 add_tool(sim sim.cpp capture.h capture.cpp)
+add_tool(capture read.cpp capture.h capture.cpp)
